k8config/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    tier: api
spec:
  replicas: 1
  selector:
    matchLabels:
      component: api-server
  template:
    metadata:
      labels:
        component: api-server
    spec:
      containers:
        - name: api
          image: corourke/dst-api
          ports:
            - containerPort: 5000
