k8config/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  labels:
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      component: db-server
  template:
    metadata:
      labels:
        component: db-server
    spec:
      volumes:
        - name: postgres-storage-1
          persistentVolumeClaim:
            claimName: db-persistent-volume-claim
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage-1
              mountPath: /var/lib/postgresql/data
              subPath: postgres
