k8config/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  labels:
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      component: redis-server
  template:
    metadata:
      labels:
        component: redis-server
    spec:
      containers:
        - name: redis
          image: redis
          ports:
            - containerPort: 6379
