k8config/fe-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fe-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: web-server
  ports:
    - port: 3000
      targetPort: 3000
